[tool.poetry]
name = "langgraph-ai-research-agent"
version = "0.1.0"
description = "Assistente de pesquisa baseado em IA, criado com LangGraph para busca e resumo de papers."
authors = ["Matheus Abrantes <abrantes_matheus@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
